# Universal-ACP-coding-agent-harness-for-Claude

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
adapters/openclaw/: DESIGN.md  README.md  acp-client.ts  harness.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  probe-python-resolve.mjs  probe-roundtrip-fake.mjs  probe-roundtrip.mjs  probe.mjs  python-resolve.ts  tsconfig.json
src/harness/: __init__.py  cli.py  testing.py
src/harness/acp/: __init__.py  bridge.py  events.py  server.py
src/harness/core/: __init__.py  budget.py  context.py  loop.py  repair.py  types.py
src/harness/hooks/: __init__.py  acp_approval.py  approval.py  cli_approval.py  cost.py
src/harness/mcp/: __init__.py  client.py  registry.py
src/harness/providers/: __init__.py  cache.py  claude.py
src/harness/session/: __init__.py  store.py
src/harness/tools/: __init__.py  _util.py  bash.py  edit.py  glob.py  grep.py  read.py
tests/: _mcp_echo_server.py  conftest.py  test_acp_bridge.py  test_acp_server.py  test_budget_and_store.py  test_cache_stability.py  test_cli.py  test_context.py  test_hardening_acp_recovery.py  test_hardening_faults.py  test_hardening_lifecycle.py  test_hardening_resume.py  test_invariant.py  test_loop_internals.py  test_mcp.py  test_mcp_live.py  test_provider_cache.py  test_repair.py  test_streaming.py  test_tools.py
